--- a/index.html
+++ b/index.html
@@ -2,12 +2,47 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>S.E. Portfolio - Malcolm Belfrom</title>
   </head>
-  <header class="header">Malcolm Belfrom</header>
   <body>
+  <!-- Header -->
+    <header class="header">
+      <h1>Malcolm Belfrom</h1>
+      <p>
+      </p>
+      <img src="" alt="placeholder image with text reading 200 width 200 height"/>
+  </header>
+
+  <!-- Navbar -->
+  <nav>
+    <a href="#">About Me</a>
+    <a href="#">Work</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <seciton class="about">
+    <header>About</header>
+      <p>Currently, I’m a student pursing a completion of course from the University of Arizona’s coding boot-camp program.  My pre boot-camp experience with several languages are with HTML, CSS, and Python primarily and some secondarily knowledge of SQL.  I have some minor experience with the Command Line Interface(CLI) within the Windows (Powershell) Linux and iOS terminals.  Throughout my professional journey, this page will be a continuous work in progress with updated applications, UI, and information.</p>
+    <img src="./assets/images/circuit.jpg" alt="Circuit Board" />
+  </seciton>
     <p>This is my page</p>
-  </body>
-  <footer>
+
+    <article class="Work">
+      <h2>Work</h2>
+
+
+    </article>
+    <footer>
+    <article class="contact">
+      <h2>Contact Information</h2>
+      <ul class="bold">
+        <li>Email: <a href="mailto:mibelfrom@gmail.com">mibelfrom@gmail.com</a></li>
+        <li>Github: <a href="https://github.com/mbelfrom">Malcolm Belfrom</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/malcolm-belfrom">Malcolm Belfrom</a></li>
+      </ul>
+    </article>
   </footer>
+</body>
+
 </html>
