--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   </head>
   <body>
   <!-- Header -->
-    <header class="header">
-      <h1>Malcolm Belfrom</h1>
-      <p>
-      </p>
-      <img src="" alt="placeholder image with text reading 200 width 200 height"/>
-  </header>
-
+  <section class="photo"> 
+    <header h2>Malcolm Belfrom</header>
+    
+    <img src="./css/Malcolm Belfrom.jpg" alt="Malcolm"/>
+    
+  </section>
   <!-- Navbar -->
   <nav>
     <a href="#">About Me</a>
@@ -21,13 +20,11 @@
     <a href="#">Contact</a>
   </nav>
 
-  <seciton class="about">
-    <header>About</header>
+  <section class="about">
+    <header h2="">About</header>
       <p>Currently, I’m a student pursing a completion of course from the University of Arizona’s coding boot-camp program.  My pre boot-camp experience with several languages are with HTML, CSS, and Python primarily and some secondarily knowledge of SQL.  I have some minor experience with the Command Line Interface(CLI) within the Windows (Powershell) Linux and iOS terminals.  Throughout my professional journey, this page will be a continuous work in progress with updated applications, UI, and information.</p>
-    <img src="./assets/images/circuit.jpg" alt="Circuit Board" />
-  </seciton>
-    <p>This is my page</p>
-
+    <img src="./css/Circuit.jpg" alt="Circuit Board" />
+  </section>
     <article class="Work">
       <h2>Work</h2>
 
@@ -36,6 +33,7 @@
     <footer>
     <article class="contact">
       <h2>Contact Information</h2>
+      <img src="css/Rwb footer.webp" alt="Banner" />
       <ul class="bold">
         <li>Email: <a href="mailto:mibelfrom@gmail.com">mibelfrom@gmail.com</a></li>
         <li>Github: <a href="https://github.com/mbelfrom">Malcolm Belfrom</a></li>
