--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>S.E. Portfolio - Malcolm Belfrom</title>
   </head>
+<body>
   
+
   <!-- Header -->
   <section class="photo"> 
     <header h2>Malcolm Belfrom</header>
@@ -14,15 +16,16 @@
     
   </section>
   <!-- navbar -->
-  <nav>
+  <nav class="navbar">
     <li><a href="#">About Me</a></li>
     <li><a href="#">Work</a></li>
     <li><a href="#">Contact</a></li>
   </nav>
+  <main>
   <!-- about me-->
   <section class="about">
     <header h2="">About</header>
-      <p>Currently, I’m a student pursing a completion of course from the University of Arizona’s coding boot-camp program.  My pre boot-camp experience with several languages are with HTML, CSS, and Python primarily and some secondarily knowledge of SQL.  I have some minor experience with the Command Line Interface(CLI) within the Windows (Powershell) Linux and iOS terminals.  Throughout my professional journey, this page will be a continuous work in progress with updated applications, UI, and information.</p>
+      <p>Currently, I’m a student pursing a completion of course from the University of Arizona’s coding boot-camp program.  My pre boot-camp experience with several languages are HTML, CSS, and Python primarily and some secondarily knowledge of SQL.  I have some minor experience with the Command Line Interface(CLI) within the Windows (Powershell) Linux and iOS terminals.  Throughout my professional journey, this page will be a continuous work in progress with updated applications, UI, and information.</p>
     <img src="./css/Circuit.jpg" alt="Circuit Board" />
   </section>
 
@@ -34,9 +37,9 @@
       <li></li>
       <li></li>
     </article>
-    
+
 <!-- contact -->
-  <footer>
+  <main>
     <article class="contact">
       <h2>Contact Information</h2>
       <img src="css/Rwb footer.webp" alt="Banner" />
@@ -46,6 +49,7 @@
         <li>LinkedIn: <a href="https://linkedin.com/in/malcolm-belfrom">Malcolm Belfrom</a></li>
       </ul>
     </article>
+  </main>
   </footer>
 </body>
 
